--- a/api/package.json
+++ b/api/package.json
@@ -21,7 +21,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^9.0.0",
+    "modules": "^0.4.0",
     "morgan": "^1.10.0",
+    "node": "^19.8.1",
     "pg": "^8.5.1",
     "sequelize": "^6.3.5"
   },
